tests/snapshots/run_wpt_conformance__onnx_isNaN_float16_positive_0D_scalar.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "is_nan.https.any.js",
    "isNaN float16 positive 0D scalar",
    "onnx",
    "PASS",
)
