tests/snapshots/run_wpt_conformance__onnx_isNaN_float32_3D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "is_nan.https.any.js",
    "isNaN float32 3D tensor",
    "onnx",
    "PASS",
)
